deployment-jenkins.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-deployment
  namespace: nginx-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
      namespace: nginx-ns
    spec:
      containers:
      - name: jenkins
        #custom image of jenkins with a built in container solution - docker engine
        image: bonvoyage/jenkins-with-docker:1.0
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: jenkins-home
            mountPath: /var/jenkins_home
          - name: docker-socket
            mountPath: /var/run/docker.sock
      volumes:
        - name: jenkins-home
          emptyDir: {}
        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock
