deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: nginx-ns
spec:
  selector:
    matchLabels:
      app: nginx-web
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-web
      namespace: nginx-ns
    spec:
      containers:
      - name: nginx
        image: bonvoyage/nginx-webserver-project:3
        ports:
        - containerPort: 80
        
        # command:
        #Edit static content - changed for exercise purpose to "Hello World" 
        #           rm /usr/share/nginx/html/index.html
        # echo "Hello World" >> /usr/share/nginx/html/index.html
        #- /bin/sh
        #- -c
        #- |-
        #  sleep infinity
