service-jenkins.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: nginx-ns
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 32015
      protocol: TCP
  selector:
    app: jenkins
