service-nginx.yaml
kind: Service
apiVersion: v1
metadata:
  name: service-nginx-webserver
  namespace: nginx-ns
  labels:
      app: nginx-web
spec:
  type: NodePort
  selector:
    app: nginx-web
  ports:
    - name: nginx-webserver
      port: 80
      targetPort: 80
      nodePort: 32044
      protocol: TCP
