ingress-nginx.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx-ns
  #Annotations serves as a resources identifier for the Ingress controller.
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: service-nginx-webserver
          servicePort: 80
